--- a/syntax_learning/guessing_game/Cargo.toml
+++ b/syntax_learning/guessing_game/Cargo.toml
@@ -1,9 +1,8 @@
-workspace = { members = ["guessing_game"] }
 [package]
-name = "syntax_learning"
+name = "guessing_game"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-[dependencies]
 
+[dependencies]
